For a complete Release Notes overview visit

  https://wiki.52north.org/bin/view/SensorWeb/SensorWebClientReleaseNotes
 

Release Notes for Sensor Web Client 3.2.0
=========================================
This release contains new features and bugfixes from versions 3.1.x.

Features:
---------
 * Removed local repository from root pom.xml as all old dependencies are available from 52n repo now
 * Change Metadata structure, now stations in the metadata have a collection of parameter collections
 * Expands the restful interface and add the option to request metadata to a specific SOS (see https://wiki.52north.org/bin/view/SensorWeb/RESTfulTimeseriesWebApp)

3.1.x Bugfixes:
---------------
 * #875: First time opening profile/user window an error occurs
 