@@ -9,11 +9,15 @@ This release contains new features and bugfixes from versions 3.1.x.
 
 Features:
 ---------
+ * Add API version to REST API
  * Removed local repository from root pom.xml as all old dependencies are available from 52n repo now
  * Change Metadata structure, now stations in the metadata have a collection of parameter collections
  * Expands the restful interface and add the option to request metadata to a specific SOS (see https://wiki.52north.org/bin/view/SensorWeb/RESTfulTimeseriesWebApp)
 
 3.1.x Bugfixes:
 ---------------
+ * #923: Stations from the first data provider are missing when starting client via Permalink
+ * #924: Timeseries values are not sorted when request timeseries data via GET
+ * #877: Starting the Sensor Web Client from a Permalink the Station Selector misses to show up all stations
  * #875: First time opening profile/user window an error occurs
  
